tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/decimal_bitwise_xor.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(3.14 ^ 2.0)

